grid layout + minor CSS

--- a/index.html
+++ b/index.html
@@ -8,6 +8,92 @@
 </head>
 
 <body>
+
+    <div class="sidebar">
+        <div class="top-options">
+            <p>home</p>
+            <p>home</p>
+            <p>home</p>
+            <p>home</p>
+            <p>home</p>
+            <p>home</p>
+        </div>
+        <div class="bottom-options">
+            <p>home</p>
+            <p>home</p>
+            <p>home</p>
+        </div>
+    </div>
+
+    <div class="header">
+        <div class="top-header"></div>
+        <div class="bottom-header">
+            <div class="bottom-left-header"></div>
+            <div class="bottom-right-header">
+                <button>New</button>
+                <button>Upload</button>
+                <button>Share</button>
+            </div>
+        </div>
+    </div>
+
+    <div class="projects">
+            <div class="project">
+                <h1>Site mainentance</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+            </div>
+            <div class="project">
+                <h1>Site mainentance</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+            </div>
+            <div class="project">
+                <h1>Site mainentance</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+            </div>
+            <div class="project">
+                <h1>Site mainentance</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+            </div>
+            <div class="project">
+                <h1>Site mainentance</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+            </div>
+            <div class="project">
+                <h1>Site mainentance</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+            </div>
+    </div>
     
+    <div class="side-stuff">
+        <div class="announcements"></div>
+            <div class="announcement">
+                <h2>Site mainentance</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+            </div>
+            <div class="announcement">
+                <h2>Site mainentance</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+            </div>
+            <div class="announcement">
+                <h2>Site mainentance</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+            </div>
+        <div class="trending">
+            <div class="trending-topic">
+                <h3>doggy dog</h3>
+                <p>small doggy dog but long</p>
+            </div>
+            <div class="trending-topic">
+                <h3>doggy dog</h3>
+                <p>small doggy dog but long</p>
+            </div>
+            <div class="trending-topic">
+                <h3>doggy dog</h3>
+                <p>small doggy dog but long</p>
+            </div>
+        </div>
+    </div>
+   
+
 </body>
 </html>
