--- a/index.html
+++ b/index.html
@@ -37,35 +37,74 @@
         </div>
     </div>
 
-    <div class="projects">
-            <div class="project">
-                <h1>Site mainentance</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+    <div class="main">
+        <h1>Your Projects</h1>
+        <div class="projects">
+                <div class="project">
+                    <h2>Site mainentance</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                    <div class = icons>
+                        <ion-icon name="star-outline"></ion-icon>
+                        <ion-icon name="eye-outline"></ion-icon>
+                        <ion-icon name="git-branch-outline"></ion-icon>
+                    </div>
+                </div>
+                <div class="project">
+                    <h2>Site mainentance</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
+                    </p>
+                    <div class = icons>
+                        <ion-icon name="star-outline"></ion-icon>
+                        <ion-icon name="eye-outline"></ion-icon>
+                        <ion-icon name="git-branch-outline"></ion-icon>
+                    </div>
+                </div>
+                <div class="project">
+                    <h2>Site mainentance</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                    <div class = icons>
+                        <ion-icon name="star-outline"></ion-icon>
+                        <ion-icon name="eye-outline"></ion-icon>
+                        <ion-icon name="git-branch-outline"></ion-icon>
+                    </div>
+                </div>
+                <div class="project">
+                    <h2>Site mainentance</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
+                    </p>
+                    <div class = icons>
+                        <ion-icon name="star-outline"></ion-icon>
+                        <ion-icon name="eye-outline"></ion-icon>
+                        <ion-icon name="git-branch-outline"></ion-icon>
+                    </div>
+                </div>
+                <div class="project">
+                    <h2>Site mainentance</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                    <div class = icons>
+                        <ion-icon name="star-outline"></ion-icon>
+                        <ion-icon name="eye-outline"></ion-icon>
+                        <ion-icon name="git-branch-outline"></ion-icon>
+                    </div>
+                </div>
+                <div class="project">
+                    <h2>Site mainentance</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
+                    </p>
+                    <div class = icons>
+                        <ion-icon name="star-outline"></ion-icon>
+                        <ion-icon name="eye-outline"></ion-icon>
+                        <ion-icon name="git-branch-outline"></ion-icon>
+                    </div>
+                </div>
             </div>
-            <div class="project">
-                <h1>Site mainentance</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-            </div>
-            <div class="project">
-                <h1>Site mainentance</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-            </div>
-            <div class="project">
-                <h1>Site mainentance</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-            </div>
-            <div class="project">
-                <h1>Site mainentance</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-            </div>
-            <div class="project">
-                <h1>Site mainentance</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-            </div>
-    </div>
-    
+        </div>
     <div class="side-stuff">
-        <div class="announcements"></div>
+        <h1 class="anH1">Announcements</h1>
+        <div class="announcements">
             <div class="announcement">
                 <h2>Site mainentance</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
@@ -78,22 +117,34 @@
                 <h2>Site mainentance</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
             </div>
+        </div>
+        
+        <h1 class=trH1>Trending</h1>
         <div class="trending">
             <div class="trending-topic">
+                <ion-icon name="american-football-sharp"></ion-icon>
                 <h3>doggy dog</h3>
                 <p>small doggy dog but long</p>
             </div>
             <div class="trending-topic">
+                <ion-icon name="baseball-sharp"></ion-icon>
                 <h3>doggy dog</h3>
                 <p>small doggy dog but long</p>
             </div>
             <div class="trending-topic">
+                <ion-icon name="basketball-sharp"></ion-icon>
+                <h3>doggy dog</h3>
+                <p>small doggy dog but long</p>
+            </div>
+            <div class="trending-topic">
+                <ion-icon name="basketball-sharp"></ion-icon>
                 <h3>doggy dog</h3>
                 <p>small doggy dog but long</p>
             </div>
         </div>
     </div>
    
-
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
