options sidebar complete

--- a/index.html
+++ b/index.html
@@ -10,25 +10,61 @@
 <body>
 
     <div class="sidebar">
+        <div class="title">
+            <ion-icon name="logo-windows"></ion-icon>
+            <p> Dashboard</p>
+        </div>
         <div class="top-options">
-            <p>home</p>
-            <p>home</p>
-            <p>home</p>
-            <p>home</p>
-            <p>home</p>
-            <p>home</p>
+            <div class="options">
+                <ion-icon name="home-sharp"></ion-icon>
+                <p> Home</p>
+            </div>
+            <div class="options">
+                <ion-icon name="person-circle-sharp"></ion-icon>
+                <p> Profile</p>
+            </div>
+            <div class="options">
+                <ion-icon name="chatbox-sharp"></ion-icon>
+                <p> Messages</p>
+            </div>
+            <div class="options">
+                <ion-icon name="time-sharp"></ion-icon>
+                <p> History</p>
+            </div>
+            <div class="options">
+                <ion-icon name="document-sharp"></ion-icon>
+                <p> Tasks</p>
+            </div>            
+            <div class="options">
+                <ion-icon name="people-sharp"></ion-icon>
+                <p> Communities</p>
+            </div>
         </div>
         <div class="bottom-options">
-            <p>home</p>
-            <p>home</p>
-            <p>home</p>
+            <div class="options">
+                <ion-icon name="settings-sharp"></ion-icon>
+                <p> Settings</p>
+            </div>
+            <div class="options">
+                <ion-icon name="help-circle-sharp"></ion-icon>
+                <p> Support</p>
+            </div>
+            <div class="options">
+                <ion-icon name="lock-closed-sharp"></ion-icon>
+                <p> Privacy</p>
+            </div>
         </div>
     </div>
 
     <div class="header">
-        <div class="top-header"></div>
+        <div class="top-header">
+            <ion-icon name="search-sharp"></ion-icon>
+            <ion-icon name="notifications-outline"></ion-icon>
+        </div>
         <div class="bottom-header">
-            <div class="bottom-left-header"></div>
+            <div class="bottom-left-header">
+                <ion-icon name="accessibility-sharp"></ion-icon>
+            </div>
             <div class="bottom-right-header">
                 <button>New</button>
                 <button>Upload</button>
