top of the header organized and styled

--- a/index.html
+++ b/index.html
@@ -59,11 +59,19 @@
     <div class="header">
         <div class="top-header">
             <ion-icon name="search-sharp"></ion-icon>
+            <input type="text" placeholder="    This doesn't actually work I just like the way it looks up here :)" >
             <ion-icon name="notifications-outline"></ion-icon>
+            <ion-icon name="accessibility-sharp"></ion-icon>
+            <span>William Wartick</span>
+           
         </div>
         <div class="bottom-header">
             <div class="bottom-left-header">
                 <ion-icon name="accessibility-sharp"></ion-icon>
+                <div class="hello-there">
+                    <p>Hi there,</p>
+                    <h2>William Wartick(@WillyWob)</h2>
+                </div>
             </div>
             <div class="bottom-right-header">
                 <button>New</button>
