final touches - css coloring/styling

--- a/index.html
+++ b/index.html
@@ -66,19 +66,17 @@
            
         </div>
         <div class="bottom-header">
-            <div class="bottom-left-header">
-                <ion-icon name="accessibility-sharp"></ion-icon>
-                <div class="hello-there">
-                    <p>Hi there,</p>
-                    <h2>William Wartick(@WillyWob)</h2>
-                </div>
+            <ion-icon name="accessibility-sharp"></ion-icon>
+            <div class="hello-there">
+                <p>Hi there,</p>
+                <h2>William Wartick(@WillyWob)</h2>
             </div>
-            <div class="bottom-right-header">
+            <div class="button-container">
                 <button>New</button>
                 <button>Upload</button>
                 <button>Share</button>
             </div>
-        </div>
+        </div> 
     </div>
 
     <div class="main">
@@ -181,7 +179,7 @@
                 <p>small doggy dog but long</p>
             </div>
             <div class="trending-topic">
-                <ion-icon name="basketball-sharp"></ion-icon>
+                <ion-icon name="football-outline"></ion-icon>
                 <h3>doggy dog</h3>
                 <p>small doggy dog but long</p>
             </div>
